--- a/src/styles/components/Deck.css
+++ b/src/styles/components/Deck.css
@@ -16,25 +16,23 @@ body {
   overflow: hidden;
 } */
 
-/* #root {
+#root {
   background: var(--main-bg-color);
   position: fixed;
   overflow: hidden;
   width: 100%;
   height: 100%;
-  cursor: url("https://uploads.codesandbox.io/uploads/user/b3e56831-8b98-4fee-b941-0e27f39883ab/Ad1_-cursor.png")
-      39 39,
-    auto;
-} */
+}
 
 .deck-container {
   position: absolute;
   width: 100vw;
-  height: 100vh;
+  height: 60vh;
   will-change: transform;
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-top: 100px;
 }
 
 .deck-card {
